Prevent date wrapping on history page

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -28,6 +28,10 @@ body {
 
 }
 
+.nowrap {
+	white-space: nowrap;
+}
+
 code, pre {
 	font-family: "Dejavu sans mono", Monaco, monospace;
 }
